--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,3 @@
-.container {
-  padding: 0 2rem;
-}
 
 .main {
   min-height: 100vh;
@@ -29,7 +26,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #758699;
   text-decoration: none;
 }
 
